--- a/notebook/Face.ipynb
+++ b/notebook/Face.ipynb
@@ -36,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "training_gen=ImageDataGenerator(rescale=1./255)                                                                                    # Creating Image generators, for all train, validation, and test set\n",
+    "training_gen=ImageDataGenerator(rescale=1./255)                                                 # Creating Image generators, for all train, validation, and test set\n",
     "validation_gen=ImageDataGenerator(rescale=1./255)\n",
     "testing_gen=ImageDataGenerator(rescale=1./255)"
    ]
@@ -126,8 +126,8 @@
     }
    ],
    "source": [
-    "imgs,lables=next(train_gen_3ch)                                                                                                     # Extracting next batch to plot it, this batch of photos are selected randomly\n",
-    "list_of_keys=['angry', 'disgust', 'fear', 'happy', 'neutral', 'sad', 'surprise']                                                    # list of Classes\n",
+    "imgs,lables=next(train_gen_3ch)                                                                                # Extracting next batch to plot it, this batch of photos are selected randomly\n",
+    "list_of_keys=['angry', 'disgust', 'fear', 'happy', 'neutral', 'sad', 'surprise']                               # list of Classes\n",
     "def plotImages(images_arr):\n",
     "  fig, axes= plt.subplots(1,32,figsize=(32,2))\n",
     "  axes= axes.flatten()\n",
@@ -137,10 +137,10 @@
     "  plt.tight_layout()\n",
     "  plt.show()\n",
     "plotImages(imgs)\n",
-    "for i in lables[:32]:                                                                                                              # Printing the lables below the respective image\n",
+    "for i in lables[:32]:                                                                                           # Printing the lables below the respective image\n",
     "  for num, j in enumerate(i):\n",
     "    if j==1:\n",
-    "      print(list_of_keys[num], end='   ')                                                                                          # Labelling seems to be spot on     \n",
+    "      print(list_of_keys[num], end='   ')                                                                       # Labelling seems to be spot on     \n",
     "num+=1   "
    ]
   },
@@ -198,10 +198,10 @@
     }
    ],
    "source": [
-    "cnn_model= Sequential([                                                                                                             # Using Keras Sequential model to build out CNN\n",
-    "    Conv2D(32, kernel_size=(3,3), activation='relu',input_shape=(48,48,1)),                                                         # First Layer of convolutional Nural network, input shape is provided only at this instance.\n",
+    "cnn_model= Sequential([                                                                                                    # Using Keras Sequential model to build out CNN\n",
+    "    Conv2D(32, kernel_size=(3,3), activation='relu',input_shape=(48,48,1)),                                                # First Layer of convolutional Nural network, input shape is provided only at this instance.\n",
     "    Conv2D(64, kernel_size=(3,3), activation='relu'),\n",
-    "    MaxPool2D(pool_size=(2,2)),                                                                                                     # Maxpool Layer\n",
+    "    MaxPool2D(pool_size=(2,2)),                                                                                            # Maxpool Layer\n",
     "    Dropout(0.05),\n",
     "\n",
     "    Conv2D(128, kernel_size=(3,3), activation='relu'),\n",
@@ -216,7 +216,7 @@
     "    MaxPool2D(pool_size=(2,2)),\n",
     "    Dropout(0.05), \n",
     "    \n",
-    "    Flatten(),                                                                                                                      # Flattening out all the layers\n",
+    "    Flatten(),                                                                                                               # Flattening out all the layers\n",
     "    Dense(1024, activation='relu'),\n",
     "    Dense(7, activation='softmax')]\n",
     ")\n",
@@ -230,14 +230,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "checkpoint = ModelCheckpoint('./my_model.h5', monitor='val_acc', verbose=1, save_best_only=True, mode='max')\n",
+    "checkpoint = ModelCheckpoint('./my_model.h5', monitor='val_acc', verbose=1, save_best_only=True, mode='max')\n",         # Deploying Checkpoints 
     "\n",
-    "early_stopping=EarlyStopping(monitor='val_loss',\n",
+    "early_stopping=EarlyStopping(monitor='val_loss',\n",                                                                     # Setting Early Stopping to prevent overfitting
     "                            min_delta=0.1,\n",
     "                            patience=4,\n",
     "                            verbose=2,\n",
     "                            restore_best_weights=True)\n",
-    "decay_lr= ReduceLROnPlateau(monitor='val_loss',\n",
+    "decay_lr= ReduceLROnPlateau(monitor='val_loss',\n",                                                                      # Setting up Decay learing rate on hitting Plateau or no learning stage
     "                           factor=0.2,\n",
     "                           patience=3,\n",
     "                           verbose=1,\n",
@@ -403,9 +403,9 @@
    ],
    "source": [
     "predictions=cnn_model.predict(test_gen)\n",
-    "from sklearn.metrics import confusion_matrix, classification_report\n",
-    "cm=confusion_matrix(y_pred=np.argmax(predictions, axis=-1), y_true=test_gen.classes)\n",
-    "cm"
+    "from sklearn.metrics import confusion_matrix, classification_report\n",                        # Importing Confution Matrix
+    "cm=confusion_matrix(y_pred=np.argmax(predictions, axis=-1), y_true=test_gen.classes)\n",       
+    "cm"                   
    ]
   },
   {
@@ -426,9 +426,9 @@
     }
    ],
    "source": [
-    "from sklearn.metrics import accuracy_score\n",
-    "aoc=accuracy_score(y_pred=np.argmax(predictions, axis=-1),y_true=test_gen.classes)\n",
-    "aoc                                                                   # I am able to get an accuracy of only 50% lets try with a pretrained model"
+    "from sklearn.metrics import accuracy_score\n",                                               # Importing Accuracy Score
+    "aoc=accuracy_score(y_pred=np.argmax(predictions, axis=-1),y_true=test_gen.classes)\n", 
+    "aoc                                                                                          # I am able to get an accuracy of only 50% lets try with a pretrained model"
    ]
   },
   {
